--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -42,7 +42,7 @@
   <%- include('partials/app-sidebar', { currentPage: 'dashboard' }) %>
   
   <div class="lg:pl-64">
-    <%- include('partials/app-header') %>
+    <%- include('partials/app-header', { lastRefresh: typeof lastRefresh !== 'undefined' ? lastRefresh : null }) %>
     
     <main class="p-4 lg:p-6">
       <div class="mb-6 flex justify-between items-center">
