--- a/views/partials/app-header.ejs
+++ b/views/partials/app-header.ejs
@@ -7,7 +7,7 @@
         </svg>
       </button>
 
-      <div class="relative flex-1 max-w-4xl">
+      <div class="relative flex-1" style="min-width: 300px; max-width: 600px;">
         <input 
           id="globalSearch" 
           type="search" 
